--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     },
     "require": {
         "php": ">=5.5",
+        "knplabs/github-api": "~1.3",
         "league/oauth2-client": "~0.4"
     }
 }
